[package]
name = "circular-avoidance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "avoidrs"
path = "src/lib.rs"

[[bin]]
name = "avoidexq"
path = "src/bin.rs"

[dependencies]
itertools = "0.10.3"
rust_decimal_macros = "1.26"

[dependencies.rust_decimal]
version = "1.26"
features = [
    "maths",
    "std",
]
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]