[package]
name = "circular-avoidance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "avoidrs"
path = "src/lib.rs"

[[bin]]
name = "avoidexq"
path = "src/bin.rs"

[dependencies]
itertools = "0.10.3"
priority-queue = "1.2.3"
plotters= "0.3.3"
serde_json = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]